# GitScrambler

./: .gitignore  manifest.yml  pre-commit-config.yml  pyproject.toml
encryptor/: __init__.py  __main__.py  cli.py  config.py  file_scanner.py  manifest.py  rules.py  tranformer.py  transformer.py  utils.py
